New Projects added

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
                     <!-- ========== Project 2 ========== -->
                     <div class="portfolio_content grid swiper-slide project-card">
-                        <img src="/images/Quikr.png" alt="" id="MeeshoImg" class="portfolio_img">
+                        <img src="/images/Quikr.png" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">Quikr Bazaar - Clone</h3>
