--- a/index.html
+++ b/index.html
@@ -204,6 +204,28 @@
                 <div class="swiper-wrapper">
                     <!-- ========== Project 1 ========== -->
                     <div class="portfolio_content grid swiper-slide project-card">
+                        <img src="/images/travelworldapp.png" alt="" class="portfolio_img">
+
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title project_title project-title">Tour management application</h3>
+                            <p class="portfolio_description project-description">
+                                Travel World is a dynamic tour management web application that empowers users to embark on unforgettable journeys. With Travel World, users can effortlessly explore a myriad of tours, create personalized accounts, and share their valuable reviews for each unique adventure.
+                            </p>
+                            <p class="project-tech-stack"><b>Tech Stack : </b>React.js | NODE JS| EXPRESS | MongoDB | BOOTSTRAP | JAVASCRIPT</p>
+                            <a href="https://github.com/AviSingh017/Tour_Management_App" target="_blank"
+                                class="project-github-link button button-flex button-small portfolio_button">
+                                <i class="uil uil-github-alt button_icon"></i>
+                            </a>
+                            <a href="https://travelworldapp.netlify.app/" target="_blank"
+                                class="button button-flex button-small portfolio_button project-deployed-link">
+                                <i class="uil uil-external-link-alt button_icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <!-- ========== Project 2 ========== -->
+                    <div class="portfolio_content grid swiper-slide project-card">
                         <img src="/images/Chessly.png" alt="" class="portfolio_img">
 
                         <div class="portfolio_data">
@@ -224,7 +246,7 @@
                         </div>
                     </div>
 
-                    <!-- ========== Project 2 ========== -->
+                    <!-- ========== Project 3 ========== -->
                     <div class="portfolio_content grid swiper-slide project-card">
                         <img src="/images/Quikr.png" alt="" class="portfolio_img">
 
@@ -246,7 +268,7 @@
                         </div>
                     </div>
 
-                    <!-- ========== Project 3 ========== -->
+                    <!-- ========== Project 4 ========== -->
                     <div class="portfolio_content grid swiper-slide project-card">
                         <img src="/images/Zapprel.png" alt="" class="portfolio_img">
 
@@ -267,7 +289,7 @@
                         </div>
                     </div>
 
-                    <!-- ========== Project 4 ========== -->
+                    <!-- ========== Project 5 ========== -->
                     <div class="portfolio_content grid swiper-slide project-card">
                         <img src="/images/SkinStore.png" alt="" class="portfolio_img">
 
