--- a/index.html
+++ b/index.html
@@ -572,12 +572,12 @@
 
         <!--==================== GITHUB STATES ====================-->
 
-        <section class="about section container react-activity-calendar" id="github">
+        <!-- <section class="about section container react-activity-calendar" id="github">
             <h2 class="section__title">Github contributions in the last year</h2>
-            <div class="react-activity-calendar calendar">
+            <div class="react-activity-calendar calendar"> -->
                 <!-- Loading stuff -->
-            </div>
-        </section>
+            <!-- </div>
+        </section> -->
 
         <!--==================== Github actitvities ====================-->
 
