--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li class="nav__item ">
-                        <a id="resume-button-1" download class="nav__link nav-link resume" target="_blank"
+                        <a id="resume-button-1" download class="nav__link nav-link resume" onclick="window.open('assets/pdf/Avishek_Singh_Resume.pdf')" target="_blank"
                             href="./assets/img/Avishek_Singh_Resume.pdf">
                             <i class="uil uil-file-blank nav__icon"></i>Resume
                         </a>
