--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     </li>
 
                     <li class="nav__item ">
-                        <a id="resume-button-1" download class="nav__link nav-link resume" onclick="window.open('assets/pdf/Avishek_Singh_Resume.pdf')" target="_blank"
-                            href="./assets/img/Avishek_Singh_Resume.pdf">
-                            <i class="uil uil-file-blank nav__icon"></i>Resume
-                        </a>
+                        <a href="assets/pdf/Avishek_Singh_Resume.pdf" class="button-flex" id="resume-link-2"
+                                onclick="window.open('assets/pdf/Avishek_Singh_Resume.pdf')" target="_blank" download>
+                                Resume <i class="uil uil-download-alt button_icon"></i>
+                            </a>
                     </li>
                 </ul>
                 <i class="uil uil-times nav__close nav__icon" id="nav-close"></i>
