--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
                     </li>
 
                     <li class="nav__item ">
-                        <a href="assets/pdf/Avishek_Singh_Resume.pdf" class="button-flex" id="resume-link-2"
-                                onclick="window.open('assets/pdf/Avishek_Singh_Resume.pdf')" target="_blank" download>
-                                Resume <i class="uil uil-download-alt button_icon"></i>
-                            </a>
+                        <a href="assets/pdf/Avishek_Singh_Resume.pdf" class="nav__link nav-link resume"
+                            id="resume-link-2" onclick="window.open('assets/pdf/Avishek_Singh_Resume.pdf')"
+                            target="_blank" download>
+                            Resume
+                        </a>
                     </li>
                 </ul>
                 <i class="uil uil-times nav__close nav__icon" id="nav-close"></i>
@@ -130,7 +131,8 @@
                     <div class="home__data">
                         <h1 id="user-detail-name" class="home__title">Hi, I'm Avishek Singh</h1>
                         <h3 class="home__subtitle">Full Stack Web Developer</h3>
-                        <p class="home__description">Dedicated Full Stack Developer with a proficiency in JavaScript and Node.js. Expertise in developing and implementing scalable and secure web applications.
+                        <p class="home__description">Dedicated Full Stack Developer with a proficiency in JavaScript and
+                            Node.js. Expertise in developing and implementing scalable and secure web applications.
                         </p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-comment-alt button__icon"></i>&nbsp&nbsp
@@ -151,7 +153,7 @@
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
-            
+
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle"></span>
 
@@ -159,8 +161,10 @@
                 <img src="assets/img/2.png" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description" id="user-detail-intro" style="text-align: left;">
-                        Hello, my name is Avishek and I'm a full stack web developer with a strong understanding of frontend technologies, MVC frameworks, Restful APIs, and <br>database designing.<br><br>
-                        Hands-on Experience developing scalable, secure, and real-world web application. Proficiency in Javascript and Node.js 
+                        Hello, my name is Avishek and I'm a full stack web developer with a strong understanding of
+                        frontend technologies, MVC frameworks, Restful APIs, and <br>database designing.<br><br>
+                        Hands-on Experience developing scalable, secure, and real-world web application. Proficiency
+                        in Javascript and Node.js
                     </p>
 
                     <div class="about__info">
@@ -209,9 +213,13 @@
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">Tour management application</h3>
                             <p class="portfolio_description project-description">
-                                Travel World is a dynamic tour management web application that empowers users to embark on unforgettable journeys. With Travel World, users can effortlessly explore a myriad of tours, create personalized accounts, and share their valuable reviews for each unique adventure.
+                                Travel World is a dynamic tour management web application that empowers users to embark
+                                on unforgettable journeys. With Travel World, users can effortlessly explore a myriad of
+                                tours, create personalized accounts, and share their valuable reviews for each unique
+                                adventure.
                             </p>
-                            <p class="project-tech-stack"><b>Tech Stack : </b>React.js | NODE JS| EXPRESS | MongoDB | BOOTSTRAP | JAVASCRIPT</p>
+                            <p class="project-tech-stack"><b>Tech Stack : </b>React.js | NODE JS| EXPRESS | MongoDB |
+                                BOOTSTRAP | JAVASCRIPT</p>
                             <a href="https://github.com/AviSingh017/Tour_Management_App" target="_blank"
                                 class="project-github-link button button-flex button-small portfolio_button">
                                 <i class="uil uil-github-alt button_icon"></i>
@@ -231,7 +239,9 @@
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">Real-time Multiplayer Chess</h3>
                             <p class="portfolio_description project-description">
-                                A real-time multiplayer chess application with real-time video and chat supporting features built using webRTC and socket.io. It also includes login/signup using JWT bcrypt and Google OAuth.</p>
+                                A real-time multiplayer chess application with real-time video and chat supporting
+                                features built using webRTC and socket.io. It also includes login/signup using JWT
+                                bcrypt and Google OAuth.</p>
                             <p class="project-tech-stack"><b>Tech Stack : </b>NODE JS| EXPRESS | MongoDB |
                                 OAuth | WEB SOCKETS | WEBRTC | HTML5 |
                                 CSS | JAVASCRIPT</p>
@@ -253,9 +263,13 @@
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">Quikr Bazaar - Clone</h3>
                             <p class="portfolio_description project-description">
-                                The project is a Quikr clone, popular online marketplace platform. It includes features such as user registration, login, buying and selling products, and the ability to post ads to sell items. Additionally, an admin dashboard is implemented to manage the platform's operations.
+                                The project is a Quikr clone, popular online marketplace platform. It includes features
+                                such as user registration, login, buying and selling products, and the ability to post
+                                ads to sell items. Additionally, an admin dashboard is implemented to manage the
+                                platform's operations.
                             </p>
-                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | BOOTSTRAP | JSON SERVER
+                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | BOOTSTRAP |
+                                JSON SERVER
                             </p>
                             <a href="https://github.com/AviSingh017/Quikr-Bazaar-Clone" target="_blank"
                                 class="project-github-link button button-flex button-small portfolio_button">
@@ -275,9 +289,13 @@
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">WT Mens Fashion - Clone</h3>
                             <p class="portfolio_description project-description">
-                                This project focuses on replicating essential features such as user registration, login, and a user-friendly landing page showcasing products. Additionally, it includes an interactive add-to-cart page and a secure payment page for a seamless shopping experience.
+                                This project focuses on replicating essential features such as user registration, login,
+                                and a user-friendly landing page showcasing products. Additionally, it includes an
+                                interactive add-to-cart page and a secure payment page for a seamless shopping
+                                experience.
                             </p>
-                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | JSON SERVER | BOOTSTRAP</p>
+                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | JSON SERVER |
+                                BOOTSTRAP</p>
                             <a href="https://github.com/AviSingh017/WT-Mens-Fashion" target="_blank"
                                 class="project-github-link button button-flex button-small portfolio_button">
                                 <i class="uil uil-github-alt button_icon"></i>
@@ -296,9 +314,12 @@
                         <div class="portfolio_data">
                             <h3 class="portfolio_title project_title project-title">The SkinStore Clone</h3>
                             <p class="portfolio_description project-description">
-                                The project is a Skinstore clone, inspired by the popular online beauty and skincare platform. It includes features such as user registration, login, and a visually appealing landing page showcasing a wide range of skincare products.
+                                The project is a Skinstore clone, inspired by the popular online beauty and skincare
+                                platform. It includes features such as user registration, login, and a visually
+                                appealing landing page showcasing a wide range of skincare products.
                             </p>
-                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | BOOTSTRAP | JSON SERVER </p>
+                            <p class="project-tech-stack"><b>Tech Stack : </b>HTML5 | CSS | JAVASCRIPT | BOOTSTRAP |
+                                JSON SERVER </p>
                             <a href="https://github.com/AviSingh017/SkinStore-Clone" target="_blank"
                                 class="project-github-link button button-flex button-small portfolio_button">
                                 <i class="uil uil-github-alt button_icon"></i>
@@ -575,8 +596,8 @@
         <!-- <section class="about section container react-activity-calendar" id="github">
             <h2 class="section__title">Github contributions in the last year</h2>
             <div class="react-activity-calendar calendar"> -->
-                <!-- Loading stuff -->
-            <!-- </div>
+        <!-- Loading stuff -->
+        <!-- </div>
         </section> -->
 
         <!--==================== Github actitvities ====================-->
