--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="assets/img/about.png">
 
     <!--==================== UNICONS ====================-->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!--==================== SWIPER CSS ====================-->
@@ -356,6 +357,7 @@
                             <div class="skills__data skills-card ">
                                 <div class="skills__titles ">
                                     <h3 class="skills__name skills-card-name">HTML</h3>
+                                    <span><i class="bx bxl-html5 skills-card-img"></i></span>
                                 </div>
                                 <div class="skills__bar">
                                     <img class="skills-card-img fyouseek" src="" alt="">
@@ -365,6 +367,7 @@
                             <div class="skills__data skills-card">
                                 <div class="skills__titles ">
                                     <h3 class="skills__name skills-card-name">CSS / Tailwind CSS</h3>
+                                    <span><i class="bx bxl-css3 skills-card-img"></i></span>
                                 </div>
                                 <div class="skills__bar">
                                     <img class="skills-card-img fyouseek" src="" alt="">
@@ -374,6 +377,7 @@
                             <div class="skills__data skills-card">
                                 <div class="skills__titles ">
                                     <h3 class="skills__name skills-card-name">JavaScript</h3>
+                                    <span><i class="bx bxl-javascript skills-card-img"></i></span>
                                 </div>
                                 <div class="skills__bar">
                                     <img class="skills-card-img fyouseek" src="" alt="">
@@ -383,6 +387,7 @@
                             <div class="skills__data skills-card">
                                 <div class="skills__titles ">
                                     <h3 class="skills__name skills-card-name">React Js</h3>
+                                    <span><i class="bx bxl-react skills-card-img"></i></span>
                                 </div>
                                 <div class="skills__bar">
                                     <img class="skills-card-img fyouseek" src="" alt="">
@@ -392,6 +397,7 @@
                             <div class="skills__data skills-card">
                                 <div class="skills__titles ">
                                     <h3 class="skills__name skills-card-name">Boostrap</h3>
+                                    <span><i class="bx bxl-bootstrap skills-card-img"></i></span>
                                 </div>
                                 <div class="skills__bar">
                                     <img class="skills-card-img fyouseek" src="" alt="">
@@ -416,6 +422,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Node Js</h3>
+                                <span><i class="bx bxl-nodejs skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -425,6 +432,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Express Js</h3>
+                                <span><i class="bx bxl-nodejs skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -434,6 +442,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">MongoDB</h3>
+                                <span><i class="bx bxl-mongodb skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -443,6 +452,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">MySQL</h3>
+                                <span><i class="bx bxs-data skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -452,6 +462,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">AWS</h3>
+                                <span><i class="bx bxl-aws skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -461,6 +472,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Sequelize</h3>
+                                <span><i class="bx bxs-data skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -470,6 +482,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Rest APIs</h3>
+                                <span><i class="bx bxs-zap skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -493,7 +506,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">VS-Code | Codepan | Replit</h3>
-
+                                <span><i class="bx bxl-visual-studio skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -504,6 +517,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Netlify | Vercel | Render</h3>
+                                <span><i class="bx bxl-netlify skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -513,6 +527,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Git & Github</h3>
+                                <span><i class="bx bxl-github skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -522,6 +537,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Postman</h3>
+                                <span><i class="bx bxs-pen skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -532,6 +548,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Figma</h3>
+                                <span><i class="bx bxl-figma skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -554,7 +571,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Project Management</h3>
-
+                                <span><i class="bx bxs-brain skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -564,6 +581,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Team Collaborations</h3>
+                                <span><i class="bx bxs-user-plus skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -573,6 +591,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Problem-Solving</h3>
+                                <span><i class="bx bxs-brain skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
@@ -581,6 +600,7 @@
                         <div class="skills__data skills-card">
                             <div class="skills__titles ">
                                 <h3 class="skills__name skills-card-name">Adaptability</h3>
+                                <span><i class="bx bxs-brain skills-card-img"></i></span>
                             </div>
                             <div class="skills__bar">
                                 <img class="skills-card-img fyouseek" src="" alt="">
